# MNIST_Celldega

./: .gitignore  MNIST.ipynb  README.md  build_widget_htmls.ipynb  index.html  license.txt  pyproject.toml
js/: mnist_viewer_widget.mjs  package-lock.json  package.json
src/mnist_celldega/: __init__.py  _warnings.py  data.py  embed.py  util.py  viz.py  widget.py
src/mnist_celldega/bundled/: mnist_viewer_widget.mjs
