[build-system]
requires = ["hatchling>=1.26.1", "hatch-jupyter-builder>=0.5.0"]
build-backend = "hatchling.build"

[project]
name = "mnist_celldega"
version = "0.1.0"
description = "Jupyter anywidget: MNIST digit viewer linked to a Celldega clustergram of Leiden clusters"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "mnist_celldega contributors" }]
keywords = ["jupyter", "widget", "anywidget", "mnist", "celldega", "clustergrammer"]
classifiers = [
  "Framework :: Jupyter",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "anywidget>=0.9.0",
  "ipywidgets>=8.0.0",
  "traitlets>=5.0",
  "jupyterlab>=4.0",
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.3",
  "celldega==0.16.0a5",
  # See bike_network_traffic: setuptools 81+ removes pkg_resources
  # which xarray_schema (a celldega -> spatialdata dep) still imports.
  "setuptools>=70,<81",
]

[project.optional-dependencies]
notebooks = [
  "scanpy>=1.10",
  "anndata>=0.10",
  "scipy>=1.11",
  "leidenalg>=0.10",
  "igraph>=0.11",
  "nbformat>=5",
  "nbconvert>=7",
  "ipykernel>=6",
]
dev = [
  "scanpy>=1.10",
  "anndata>=0.10",
  "scipy>=1.11",
  "leidenalg>=0.10",
  "igraph>=0.11",
  "nbformat>=5",
  "nbconvert>=7",
  "ipykernel>=6",
  "ruff",
  "pytest>=8.0",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/cornhundred/MNIST_Celldega"
Source = "https://github.com/cornhundred/MNIST_Celldega"

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint = "ruff check src tests {args}"
format = "ruff format src tests {args}"
fmt = "ruff format src tests {args}"
all = ["lint", "format"]

[tool.hatch.envs.test]
dependencies = ["pytest>=8.0"]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"

[tool.hatch.build]
only-packages = true
artifacts = ["src/mnist_celldega/bundled/widget.js"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/mnist_celldega/bundled/widget.js"]
skip-if-exists = ["src/mnist_celldega/bundled/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
npm = "npm"
build_cmd = "build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnist_celldega"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/js", "/pyproject.toml"]

[tool.ruff]
exclude = [
  ".git",
  ".venv",
  ".eggs",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  "build",
  "dist",
  "js/node_modules",
  "node_modules",
]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mnist_celldega"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
